top banner almost done

--- a/index.html
+++ b/index.html
@@ -5,8 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>personal-website</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <section id="header">
+        <div class="half-width text">
+            <h1 class="text-padding">
+                Hellow I'm
+            </h1>
+            <h1 class="name text-padding">
+                Jack Smith
+            </h1>
+            <p class="paragraph">
+                You might saw me jumping, climbing bulding and stopping trains. But nobody pays me a dime for that work.
+            </p>
+            <a class="header-anchor" href="">HERE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/peter.png" alt="This is peter image">
+        </div>
+    </section>
 </body>
 </html>
