finally fix background-image

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <section id="header">
         <div class="half-width text">
-            <h1 class="text-padding">
+            <h1 class="text-margin">
                 Hellow I'm
             </h1>
-            <h1 class="name text-padding">
+            <h1 class="Jack text-margin">
                 Jack Smith
             </h1>
             <p class="paragraph">
