--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p class="header-paragraph">
                 You might saw me jumping, climbing bulding and stopping trains. But nobody pays me a dime for that work.
             </p>
-            <a class="header-anchor" href="https://www.linkedin.com/in/roman-siddique-49293b2ba/">HERE ME</a>
+            <a target="_blank" class="header-anchor" href="https://www.linkedin.com/in/roman-siddique-49293b2ba/">HERE ME</a>
         </div>
         <div class="half-width">
             <img src="images/peter.png" alt="This is peter image">
@@ -35,7 +35,7 @@
         <div class="half-width biography-text">
             <h1>Biography</h1>
             <p class="biography-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla at cumque minima nihil molestiae. Voluptatem enim voluptate pariatur, quaerat porro recusandae quam sequi ea! Tempore vitae veritatis amet cumque harum!</p>
-            <a class="biography-anchor" href="Document.pdf">Download CV</a>
+            <a target="_blank" class="biography-anchor" href="Document.pdf">Download CV</a>
         </div>
         
     </section>
@@ -55,7 +55,7 @@
         <h4 class="founder">Founder & CEO Alies</h4>
         <p class="footer-paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non enim laudantium labore, aut fugit nihil totam amet impedit nulla Lorem ipsum dolor sit, amet consectetur adipisicing elit. Mollitia est eius tempore, minima ratione assumenda fugit modi soluta, officiis ipsam yfhhf dhdydg dhyhde dhudyud djduhu  </p>
         <div id="footer-anchor">
-            <a href="mailto:romansiddique66626@gmail.com"><h4 id="message">Leave me a message in the</h4><h2 >romansiddique66626@gmail.com</h2></a>
+            <a target="_blank" href="mailto:romansiddique66626@gmail.com"><h4 id="message">Leave me a message in the</h4><h2 >romansiddique66626@gmail.com</h2></a>
         </div>
         
     </section>
